--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,370 @@
-.App {
-  text-align: center;
+@import '~antd/dist/antd.css';
+*{
+	margin: 0;
+	padding: 0;
+}
+html{
+	height: 100%;
+}
+body {
+	font-size: 12px;
+	height: 100%;
+	color: #333;
+	background-color: #f8f8f8;	
+	font-family: "Helvetica Neue,Tahoma,Arial,PingFangSC-Regular,Hiragino Sans GB,Microsoft Yahei,sans-serif";
+}
+a {
+	color: #333;
+}
+a,a:active,a:focus,a:hover,a:visited {
+	text-decoration: none;
+}
+ul,li {
+	margin: 0;
+	padding: 0;
+	list-style: none;
+}
+textarea {
+	border: 0;
+	outline: none;
+}
+button {
+	outline: none;
+}
+input {
+	outline: none;
+	border: none;
+}
+img {
+	max-width: 100%;
+}
+p{
+	margin: 0;
+	padding: 0;
+}
+.clearfix::after {
+    *zoom: 1;
+	clear: both;
+}
+.display-flex {
+    display: -webkit-box;
+    display: flex;
+}
+.flex-nowrap{
+	flex-wrap: nowrap;
+}
+.flex-wrap{
+	flex-wrap: wrap;
+}
+.align-center {
+    -webkit-box-align: center;
+    align-items: center;
+}
+.justify-space-between {
+    justify-content: space-between;
+}
+.justify-start {
+	-webkit-box-pack: start;
+    justify-content: flex-start;
+}
+.justify-center {
+    justify-content: center;
+}
+.justify-end {
+	-webkit-box-pack: end;
+    justify-content: flex-end;
+}
+.flex-1{
+	-webkit-box-flex: 1;
+	flex: 1;
+}
+.img-cover {
+	width: 100%;
+	height: 100%;
+}
+.hidden {
+	overflow: hidden;
+}
+.fl {
+	float: left;
+}
+.fr {
+	float: right;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.bor-0 {
+  border: none !important;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.bor-1 {
+  border: 1px solid #ccc;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.bor-b-1 {
+  border-bottom: 1px solid #ccc !important;
 }
 
-.App-link {
-  color: #61dafb;
+.bor-r-1 {
+  border-right: 1px solid #ccc !important;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.bor-l-1 {
+  border-left: 1px solid #ccc !important;
+}
+
+.bor-t-1 {
+  border-top: 1px solid #ccc !important;
+}
+.inline-block {
+	display: inline-block;
+}
+.text-center {
+	text-align: center;
+}
+.text-left {
+	text-align: left;
+}
+.text-right {
+	text-align: right;
+}
+
+.line-2-overflow,
+.line-3-overflow {
+  overflow: hidden;
+  -o-text-overflow: ellipsis;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-box;
+  display: -o-box;
+  -webkit-box-orient: vertical;
+}
+
+.line-1-overflow {
+  white-space: nowrap;
+  -o-text-overflow: ellipsis;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+
+.line-2-overflow {
+  -webkit-line-clamp: 2;
+}
+
+.line-3-overflow {
+  -webkit-line-clamp: 3;
+}
+
+.text-ellipsis {
+  overflow: hidden;
+  -o-text-overflow: ellipsis;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+/*定义基础字号*/
+.color-red {
+	color: red;
+}
+.color-000 {
+	color: #000;
+}
+.color-333 {
+	color: #333;
+}
+.color-666 {
+	color: #666;
+}
+.color-999 {
+	color: #999;
+}
+.color-ccc {
+	color: #ccc;
+}
+.bg-white {
+	background: #fff;
+}
+
+/*定义基础边距*/
+.mar-5 {
+	margin: 5px;
+}
+.mar-t-5 {
+	margin-top: 5px;
+}
+.mar-r-5 {
+	margin-right: 5px;
+}
+.mar-b-5 {
+	margin-bottom: 5px;
+}
+.mar-l-5 {
+	margin-left: 5px;
+}
+.mar-10 {
+	margin: 10px;
+}
+.mar-t-10 {
+	margin-top: 10px;
+}
+.mar-r-10 {
+	margin-right: 10px;
+}
+.mar-b-10 {
+	margin-bottom: 10px;
+}
+.mar-l-10 {
+	margin-left: 10px;
+}
+.mar-15 {
+	margin: 15px;
+}
+.mar-t-15 {
+	margin-top: 15px;
+}
+.mar-r-15 {
+	margin-right: 15px;
+}
+.mar-b-15 {
+	margin-bottom: 15px;
+}
+.mar-l-15 {
+	margin-left: 15px;
+}
+.mar-20 {
+	margin: 20px;
+}
+.mar-t-20 {
+	margin-top: 20px;
+}
+.mar-r-20 {
+	margin-right: 20px;
+}
+.mar-b-20 {
+	margin-bottom: 20px;
+}
+.mar-l-20 {
+	margin-left: 20px;
+}
+.mar-25 {
+	margin: 25px;
+}
+.mar-t-25 {
+	margin-top: 25px;
+}
+.mar-r-25 {
+	margin-right: 25px;
+}
+.mar-b-25 {
+	margin-bottom: 25px;
+}
+.mar-l-25 {
+	margin-left: 25px;
+}
+.mar-30 {
+	margin: 30px;
+}
+.mar-t-30 {
+	margin-top: 30px;
+}
+.mar-r-30 {
+	margin-right: 30px;
+}
+.mar-b-30 {
+	margin-bottom: 30px;
+}
+.mar-l-30 {
+	margin-left: 30px;
+}
+.pad-5 {
+	padding: 5px;
+}
+.pad-t-5 {
+	padding-top: 5px;
+}
+.pad-r-5 {
+	padding-right: 5px;
+}
+.pad-b-5 {
+	padding-bottom: 5px;
+}
+.pad-l-5 {
+	padding-left: 5px;
+}
+.pad-10 {
+	padding: 10px;
+}
+.pad-t-10 {
+	padding-top: 10px;
+}
+.pad-r-10 {
+	padding-right: 10px;
+}
+.pad-b-10 {
+	padding-bottom: 10px;
+}
+.pad-l-10 {
+	padding-left: 10px;
+}
+.pad-15 {
+	padding: 15px;
+}
+.pad-t-15 {
+	padding-top: 15px;
+}
+.pad-r-15 {
+	padding-right: 15px;
+}
+.pad-b-15 {
+	padding-bottom: 15px;
+}
+.pad-l-15 {
+	padding-left: 15px;
+}
+.pad-20 {
+	padding: 20px;
+}
+.pad-t-20 {
+	padding-top: 20px;
+}
+.pad-t-25 {
+	padding-top: 25px;
+}
+.pad-r-20 {
+	padding-right: 20px;
+}
+.pad-b-20 {
+	padding-bottom: 20px;
+}
+.pad-l-20 {
+	padding-left: 20px;
+}
+.pad-25 {
+	padding: 25px;
+}
+.pad-t-25 {
+	padding-top: 25px;
+}
+.pad-r-25 {
+	padding-right: 25px;
+}
+.pad-b-25 {
+	padding-bottom: 25px;
+}
+.pad-l-25 {
+	padding-left: 25px;
+}
+.pad-30 {
+	padding: 30px;
+}
+.pad-t-30 {
+	padding-top: 30px;
+}
+.pad-r-30 {
+	padding-right: 30px;
+}
+.pad-b-30 {
+	padding-bottom: 30px;
+}
+.pad-l-30 {
+	padding-left: 30px;
 }
